--- a/eureka_kafka_producer/src/main/resources/application.yml
+++ b/eureka_kafka_producer/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   application:
     name: msg-kafka-producer
   kafka:
-    bootstrap-servers: localhost:9092
+    bootstrap-servers: kafka:9092
     consumer:
       group-id: myGroup
 eureka:
@@ -14,7 +14,7 @@ eureka:
     instance-id: msg-kafka-producer
   client:
     service-url:
-      defaultZone: http://127.0.0.1:8761/eureka
+      defaultZone: http://eureka-server:8761/eureka
 springdoc:
   api-docs:
     enabled: true
@@ -26,4 +26,4 @@ openapi:
   service:
     title: 이메일 발송 서비스
     serviceVersion: 1.0.0
-    url: http://localhost:8000
+    url: http://eureka-kafka-gateway:8000
