--- a/eureka_tcp_server/src/main/resources/application.yml
+++ b/eureka_tcp_server/src/main/resources/application.yml
@@ -8,4 +8,4 @@ eureka:
     instance-id: tcp-server
   clients:
     service-url:
-      defaultZone: http://127.0.0.1:8761/eureka
+      defaultZone: http://eureka-server:8761/eureka
