--- a/eureka_kafka_consumer/src/main/resources/application.yml
+++ b/eureka_kafka_consumer/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   application:
     name: msg-kafka-consumer
   kafka:
-    bootstrap-servers: kafka:9092
+    bootstrap-servers: localhost:9092
     consumer:
       group-id: myGroup
 eureka:
@@ -12,8 +12,25 @@ eureka:
     instance-id: msg-kafka-consumer
   client:
     service-url:
-      defaultZone: http://eureka-server:8761/eureka
+      defaultZone: http://localhost:8761/eureka
+my:
+  netty:
+    host: localhost
+    port: 9090
+
+---
+
+spring:
+  config:
+    activate:
+      on-profile: docker
+  kafka:
+    bootstrap-servers: kafka:9092
 my:
   netty:
     host: eureka-tcp-server
-    port: 9000
+    port: 9090
+eureka:
+  clients:
+    service-url:
+      defaultZone: http://eureka-server:8761/eureka
