--- a/eureka_tcp_server/src/main/resources/application.yml
+++ b/eureka_tcp_server/src/main/resources/application.yml
@@ -8,4 +8,15 @@ eureka:
     instance-id: tcp-server
   clients:
     service-url:
+      defaultZone: http://localhost:8761/eureka
+
+---
+
+spring:
+  config:
+    activate:
+      on-profile: docker
+eureka:
+  clients:
+    service-url:
       defaultZone: http://eureka-server:8761/eureka
